[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
reqwest = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
